1、作业创建接口修改

--- a/eteacher/resource/jdbc.properties
+++ b/eteacher/resource/jdbc.properties
@@ -10,9 +10,10 @@
 BDType=mysql
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #datasource.driverClassName=org.gjt.mm.mysql.Driver
-datasource.url=jdbc:mysql://192.168.1.116:3306/eteacher2?useUnicode=true&characterEncoding=UTF-8
+datasource.url=jdbc:mysql://123.56.72.53:13306/eteacher2?useUnicode=true&characterEncoding=UTF-8
+#datasource.url=jdbc:mysql://192.168.1.109:3306/eteacher2?useUnicode=true&characterEncoding=UTF-8
 datasource.username=root
-datasource.password=mysql
+datasource.password=root
 
 
 
