--- a/eteacher/.classpath
+++ b/eteacher/.classpath
@@ -43,6 +43,11 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="F:/mywork/trunk/eteacher/WebContent/WEB-INF/lib/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="F:/mywork/trunk/eteacher/WebContent/WEB-INF/lib/jiguang-common-0.1.6.jar"/>
+	<classpathentry kind="lib" path="F:/mywork/trunk/eteacher/WebContent/WEB-INF/lib/jpush-client-3.2.11.jar"/>
+	<classpathentry kind="lib" path="F:/mywork/trunk/eteacher/WebContent/WEB-INF/lib/slf4j-api-1.7.7.jar"/>
+	<classpathentry kind="lib" path="F:/mywork/trunk/eteacher/WebContent/WEB-INF/lib/slf4j-log4j12-1.7.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
